--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
-
+  font_awesome: ^5.10.1
   user_repository:
     path: packages/user_repository
 
