--- a/packages/pizza_repository/pubspec.yaml
+++ b/packages/pizza_repository/pubspec.yaml
@@ -9,15 +9,15 @@ environment:
   sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
+  cloud_firestore: ^5.2.1
+  cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
-
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
