--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,11 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   font_awesome_flutter: ^10.7.0
-
-  user_repository:
-    path: packages/user_repository
+  lottie: ^3.1.2
   pizza_repository:
     path: packages/pizza_repository
+  user_repository:
+    path: packages/user_repository
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -31,3 +31,4 @@ flutter:
 
   assets:
     - assets/
+    - assets/animation/
