new folders & location change

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pizza_app
-description: "A new Flutter project."
+description: "Fast food delivery project."
 publish_to: "none"
 version: 1.0.0+1
 
