added bottom navigation bar with extra dummy screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,21 @@ dependencies:
   bloc: ^8.1.4
   cupertino_icons: ^1.0.6
   equatable: ^2.0.5
+  firebase_auth: ^5.2.0
   firebase_core: ^3.3.0
+  flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
+  iconly: ^1.0.1
   lottie: ^3.1.2
+  navigation_view: ^1.0.6
   pizza_repository:
     path: packages/pizza_repository
+  shimmer: ^3.0.0
   user_repository:
     path: packages/user_repository
 
@@ -34,3 +40,4 @@ flutter:
   assets:
     - assets/
     - assets/animation/
+    - assets/images/
