--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   add_to_cart_animation: ^2.0.4
   bloc: ^8.1.4
+  cloud_firestore: ^5.4.2
   cupertino_icons: ^1.0.6
   equatable: ^2.0.5
   firebase_auth: ^5.2.0
@@ -21,6 +22,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   iconly: ^1.0.1
+  intl: ^0.19.0
   ionicons: ^0.2.2
   lottie: ^3.1.2
   navigation_view: ^1.0.6
