--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   pizza_repository:
     path: packages/pizza_repository
   provider: ^6.1.2
+  shared_preferences: ^2.3.3
   shimmer: ^3.0.0
   user_repository:
     path: packages/user_repository
